Added JsonIgnoreProperties unknown